@@ -37,9 +37,9 @@ if {$tcl_platform(platform) eq {windows}} {
 } else {
     set testFileName test.db
     set testDBName [file join $testdir $testFileName]
+    catch {file delete $testDBName}
     set connStr "DRIVER=SQLite3;"
     append connStr Database= $testDBName
-    puts [list connStr = $connStr]
     tcltest::testConstraint sqlite 1
 }
 
@@ -1030,7 +1030,7 @@ test tdbcodbc-9.11 {stmt foreach -as lists --} {*}{
     -result {{4 barney {}} {5 betty {}} {6 bam-bam {}}}
 }
 
-test tdbc-9.12 {db foreach -as lists --} {*}{
+test tdbcodbc-9.12 {db foreach -as lists --} {*}{
     -body {
 	set result {}
 	db foreach -as lists row {
@@ -1087,7 +1087,7 @@ test tdbcodbc-9.14 {stmt foreach -as lists -columnsvar c --} {*}{
     -result {idnum 4 name barney idnum 5 name betty idnum 6 name bam-bam}
 }
 
-test tdbc-9.15 {db foreach -as lists -columnsvar c --} {*}{
+test tdbcodbc-9.15 {db foreach -as lists -columnsvar c --} {*}{
     -body {
 	set result {}
 	db foreach -as lists -columnsvar c -- row {
@@ -1675,7 +1675,7 @@ test tdbcodbc-10.2 {allrows - no args} {*}{
     -result {{idnum 4 name barney} {idnum 5 name betty} {idnum 6 name bam-bam}}
 }
 
-test tdbc-10.3 {allrows - no args} {*}{
+test tdbcodbc-10.3 {allrows - no args} {*}{
     -body {
 	db allrows {
 	    SELECT idnum, name FROM people WHERE name LIKE 'b%'
@@ -1716,7 +1716,7 @@ test tdbcodbc-10.5 {allrows --} {*}{
     -result {{idnum 4 name barney} {idnum 5 name betty} {idnum 6 name bam-bam}}
 }
 
-test tdbc-10.6 {allrows --} {*}{
+test tdbcodbc-10.6 {allrows --} {*}{
     -body {
 	db allrows -- {
 	    SELECT idnum, name FROM people WHERE name LIKE 'b%'
@@ -1757,7 +1757,7 @@ test tdbcodbc-10.8 {allrows -as lists} {*}{
     -result {{4 barney} {5 betty} {6 bam-bam}}
 }
 
-test tdbc-10.9 {allrows -as lists} {*}{
+test tdbcodbc-10.9 {allrows -as lists} {*}{
     -body {
 	db allrows -as lists {
 	    SELECT idnum, name FROM people WHERE name LIKE 'b%'
